tests/machine/x/java/string_compare.error
line 0: javac error: exit status 1
/tmp/TestCompileValidProgramsstring_compare3151849371/001/Main.java:3: error: bad operand types for binary operator '<'
		System.out.println("a" < "b");
		                       ^
  first type:  String
  second type: String
/tmp/TestCompileValidProgramsstring_compare3151849371/001/Main.java:4: error: bad operand types for binary operator '<='
		System.out.println("a" <= "a");
		                       ^
  first type:  String
  second type: String
/tmp/TestCompileValidProgramsstring_compare3151849371/001/Main.java:5: error: bad operand types for binary operator '>'
		System.out.println("b" > "a");
		                       ^
  first type:  String
  second type: String
/tmp/TestCompileValidProgramsstring_compare3151849371/001/Main.java:6: error: bad operand types for binary operator '>='
		System.out.println("b" >= "b");
		                       ^
  first type:  String
  second type: String
4 errors


  1| print("a" < "b")
  2| print("a" <= "a")
