tests/machine/x/java/string_compare.java
public class Main {
	public static void main(String[] args) {
		System.out.println("a" < "b");
		System.out.println("a" <= "a");
		System.out.println("b" > "a");
		System.out.println("b" >= "b");
	}
}
